--- a/templates/hospitals.html
+++ b/templates/hospitals.html
@@ -21,7 +21,7 @@
 				<P>{{ hospital.intro }}</P>
 			</li>
 			<li class="bt-nn">
-				<a class="morebtn hvr-rectangle-in" href="{% url 'view.orders' %}">查看科室</a>
+				<a class="morebtn hvr-rectangle-in" href="{% url 'view.select' %}">查看</a>
 			</li>
 			<div class="clearfix"></div>
 		</div>
