--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,7 @@
 					</div>
 					<div class="header-right1">
 						<div class="cart box_1">
-							<a href="{% url 'view.checkout' %}">
+							<a href="{% url 'view.list' %}">
 								<h3> <span class="simpleCart_total"> ￥0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span> items)<img src="{% static 'images/bag.png' %}" alt=""></h3>
 							</a>	
 							<p><a href="javascript:;" class="simpleCart_empty">取消所有预约</a></p>
